--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_messaging: ^14.4.0
   image_picker: ^0.8.7+3
   intl: ^0.17.0
+  awesome_select: ^6.0.0
 
 dev_dependencies:
   flutter_test:
